More install instructions.

--- a/report/tex/manual/install_instructions.tex
+++ b/report/tex/manual/install_instructions.tex
@@ -47,6 +47,7 @@ Connection unit test requires right to open listening sockets and ports \lstinli
 \item Android SDK.
 \item Development IDE. Eclipse has been used, but IntelliJ IDEA and Android Studio should work.
 \item Java Development Kit.
+\item Connector/J library. Included in the library folder of the project.
 \end{itemize}
 
 \subsection{Building Puddle Android application}
