--- a/report/tex/manual/install_instructions.tex
+++ b/report/tex/manual/install_instructions.tex
@@ -47,7 +47,7 @@ Connection unit test requires right to open listening sockets and ports \lstinli
 \item Android SDK.
 \item Development IDE. Eclipse has been used, but IntelliJ IDEA and Android Studio should work.
 \item Java Development Kit.
-\item Connector/J library. Included in the library folder of the project.
+\item Connector/J library. Included in the library folder of the project. Can also be downloaded from \citep{mysqlconnectorj}.
 \end{itemize}
 
 \subsection{Building Puddle Android application}
